--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -61,7 +61,7 @@
 
 // TODO these are not buttons.
 input[type='text'] {
-    padding: 0.33em 0.5em;
+    padding: 0.33em;
     border: 1px solid #808080;
     box-shadow: inset 1px 1px 1px -1px rgba(#444, 1);
     border-radius: 2px;
@@ -79,12 +79,11 @@ input[type='text'] {
     padding: 0 0.33em;
     border: 1px solid #808080;
     border-radius: 2px;
-    background: #ddd;
+    background: #e8e8e8;
 
 
     > input[type='text'] {
-        border-top: none;
-        border-bottom: none;
+        margin: -1px 0;
         border-radius: 0;
     }
 
