--- a/scss/archetype/_buttons.scss
+++ b/scss/archetype/_buttons.scss
@@ -4,13 +4,13 @@
     background: $base;
     background-image: -moz-linear-gradient(rgba(lighten($base, 10%), 0.9) 0%, rgba(darken($base, 10%), 0.9) 100%);
     background-image: -moz-linear-gradient(rgba(white, 0.5) 0%, rgba(darken($base, 10%), 0.7) 100%);
-    background-image: -moz-linear-gradient(rgba($base, 0) 0%, rgba(darken($base, 15%), 0.9) 100%);
-    border-color: darken($base, 50%);
+    background-image: -moz-linear-gradient(rgba($base, 0) 0%, rgba(darken($base, 20%), 0.9) 100%);
+    border-color: darken($base, 30%);
     box-shadow: inset 0 0 2px rgba(white, 0.5),
-        1px 1px 2px rgba(#999, 0.5);
+        1px 1px 2px rgba(#999, 0.4);
 
     &:hover {
-        background-color: darken($base, 5%);
+        background-color: lighten($base, 5%);
     }
 
     &:active {
@@ -19,7 +19,7 @@
 }
 
 .btn {
-    padding: 0.33em 0.5em;
+    padding: 0.25em 0.5em;
 
     color: black;
     border: 1px solid #777;
@@ -29,9 +29,9 @@
     @include button-color(#f4f4f4);
 
     &[disabled] {
-        color: #606060;
-        border-color: #606060;
-        background: #909090;
+        color: #999;
+        border-color: #ccc;
+        background: #eee;
         box-shadow: none;
         cursor: not-allowed;
     }
@@ -60,8 +60,8 @@
     box-shadow: 0 0 0 -1em yellow;
 }
 
-.btn.lvl-success { @include button-color(hsl(120, 40%, 83%)); }
-.btn.lvl-info { @include button-color(hsl(216, 50%, 83%)); }
+.btn.lvl-success { @include button-color(hsl(120, 40%, 87%)); }
+.btn.lvl-info { @include button-color(hsl(216, 50%, 87%)); }
 .btn.btn-clear { @include button-color(hsl(30, 50%, 83%)); }
 .btn.lvl-error { @include button-color(hsl(0, 50%, 83%)); }
 
@@ -70,8 +70,8 @@
 // TODO these are not buttons.
 input[type='text'] {
     padding: 0.33em;
-    border: 1px solid #808080;
-    box-shadow: inset 1px 1px 1px -1px rgba(#444, 1);
+    border: 1px solid #999;
+    box-shadow: inset 1px 1px 1px 0px rgba(#999, 0.4);
     border-radius: 2px;
     background: white;
 
