Var for usual transition time.

--- a/scss/archetype/_defs.scss
+++ b/scss/archetype/_defs.scss
@@ -5,3 +5,8 @@ $margin: 1em !default;
 
 ////// Colors
 // ...
+
+
+////// Transitions
+// Transition time for most hover effects
+$hover-time: 0.2s;
