--- a/scss/archetype/_buttons.scss
+++ b/scss/archetype/_buttons.scss
@@ -1,16 +1,20 @@
 // buttons, buttons, get yer buttons
+@import "lib/css3";
+@import "defs";
 
 @mixin button-color($base) {
     background: $base;
     background-image: -moz-linear-gradient(rgba(lighten($base, 10%), 0.9) 0%, rgba(darken($base, 10%), 0.9) 100%);
     background-image: -moz-linear-gradient(rgba(white, 0.5) 0%, rgba(darken($base, 10%), 0.7) 100%);
-    background-image: -moz-linear-gradient(rgba($base, 0) 0%, rgba(darken($base, 20%), 0.9) 100%);
-    border-color: darken($base, 30%);
+    background-image: -moz-linear-gradient(rgba($base, 0) 0%, rgba(darken($base, 10%), 0.5) 100%);
+    border-color: darken($base, 10%);
     box-shadow: inset 0 0 2px rgba(white, 0.5),
-        1px 1px 2px rgba(#999, 0.4);
+        1px 1px 2px 0px rgba(black, 0.1);
+
+    @include transition(background-color linear $hover-time);
 
     &:hover {
-        background-color: lighten($base, 5%);
+        background-color: lighten($base, 3%);
     }
 
     &:active {
@@ -45,6 +49,7 @@
     .btn {
         border-radius: 0;
         margin: 0;
+        word-spacing: normal;
 
         & + .btn {
             margin-left: -1px;
@@ -60,10 +65,11 @@
     box-shadow: 0 0 0 -1em yellow;
 }
 
-.btn.lvl-success { @include button-color(hsl(120, 40%, 87%)); }
-.btn.lvl-info { @include button-color(hsl(216, 50%, 87%)); }
-.btn.btn-clear { @include button-color(hsl(30, 50%, 83%)); }
-.btn.lvl-error { @include button-color(hsl(0, 50%, 83%)); }
+.btn.lvl-success { @include button-color(hsl(120, 40%, 90%)); }
+.btn.lvl-info { @include button-color(hsl(216, 50%, 90%)); }
+.btn.lvl-error { @include button-color(hsl(0, 50%, 90%)); }
+.btn.btn-submit { @include button-color(hsl(216, 50%, 90%)); }
+.btn.btn-clear { @include button-color(hsl(30, 50%, 90%)); }
 
 
 
