--- a/scss/archetype/_table.scss
+++ b/scss/archetype/_table.scss
@@ -6,10 +6,24 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 
+    th,
+    td {
+        padding: 0.5em;
+    }
+
     > tbody > tr {
-        > th,
-        > td {
-            padding: 0.25em;
+    }
+}
+
+table.striped {
+    > tbody > tr:nth-child(2n) {
+        background: #f4f4f4;
+    }
+    > tfoot > tr {
+        background: #eee;
+
+        &:first-child {
+            border-top: 1px solid #ccc;
         }
     }
 }
