Submit buttons should inherit from .btn-submit.

--- a/scss/archetype/style/_level3.scss
+++ b/scss/archetype/style/_level3.scss
@@ -7,3 +7,8 @@ input[type='reset'],
 button {
     @extend .btn;
 }
+
+input[type='submit'],
+button[type='submit'] {
+    @extend .btn.btn-submit;
+}
