--- a/scss/archetype/_buttons.scss
+++ b/scss/archetype/_buttons.scss
@@ -17,6 +17,10 @@
 
     &:hover {
         background-color: scale-color($base, $lightness: -5%);
+
+        // Try to make links not look like links
+        color: inherit;
+        text-decoration: none;
     }
 
     &:active {
@@ -43,6 +47,11 @@
         background: #eee;
         box-shadow: none;
         cursor: not-allowed;
+    }
+
+    a& {
+        display: inline-block;
+        line-height: normal;
     }
 }
 
