--- a/scss/archetype/style/_level1.scss
+++ b/scss/archetype/style/_level1.scss
@@ -1,4 +1,6 @@
-// Very simple default styling slash resetting
+/** Level 1 styling: simple baseline defaults, unopinionated, perhaps suitable
+ * for inclusion as a browser's default stylesheet.
+ */
 
 @import "defs";
 
@@ -7,6 +9,7 @@
 
 body {
     font-family: "Ubuntu", "DejaVu Sans", sans-serif;
+    font-size: 16px;
     color: #202020;
 }
 
@@ -28,67 +31,13 @@ section {
     }
 }
 
-h1 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 0.5em;
-}
-
 p {
     line-height: 1.5;
     margin-bottom: 0.5em;
 }
 
 
-////// Forms
-// Kill the focus ring's extra spacing in Gecko
-::-moz-focus-inner {
-    padding: 0;
-    border: none;
-}
-
-// Form elements need the same sizing as everything else
-input, button {
-    font-size: 100%;
-    font: inherit;
-    line-height: normal; // fx, opera compat
-}
-
-// Use pointer for clicky elements
-input[type='submit'],
-input[type='reset'],
-input[type='button'],
-button {
-    cursor: pointer;
-
-    // But not if they're disabled
-    &[disabled] {
-        cursor: default;
-    }
-}
-
-
 ////// Inline
-
-a {
-    text-decoration: underline;
-}
-
-em, i {
-    font-style: italic;
-}
-
-strong, b {
-    font-weight: bold;
-}
-
-s {
-    text-decoration: line-through;
-}
-
-u {
-    text-decoration: underline;
-}
 
 code, tt, kbd, samp, pre {
     // TODO document this apparent sans-serif hack
@@ -98,15 +47,6 @@ code, tt, kbd, samp, pre {
 var {
     font-family: serif;
     font-style: italic;
-}
-
-sub {
-    font-size: 90%;
-    vertical-align: sub;
-}
-sup {
-    font-size: 90%;
-    vertical-align: super;
 }
 
 pre {
