Refiddle how levels work.  Kill the jqui include.

--- a/scss/archetype/archetype.scss
+++ b/scss/archetype/archetype.scss
@@ -7,7 +7,7 @@
 @import "table";
 @import "lists";
 
-@import "style/level1";
-@import "style/level2";
+// Choose ONE; each level includes those above it.
+//@import "style/level1";
+//@import "style/level2";
 @import "style/level3";
-@import "style/jqui";
