--- a/scss/archetype/_defs.scss
+++ b/scss/archetype/_defs.scss
@@ -4,9 +4,10 @@ $margin: 1em !default;
 
 
 ////// Colors
-// ...
+// General-purpose border
+$border-color: #ccc;
 
 
 ////// Transitions
 // Transition time for most hover effects
-$hover-time: 0.2s;
+$hover-time: 0.1s;
