Use relative paths, to work with pyscss.

--- a/scss/archetype/style/_level3.scss
+++ b/scss/archetype/style/_level3.scss
@@ -1,7 +1,7 @@
 // LEVEL 3: Use a bunch of archetype stylings *by default*.
 // Fair warning: this might generate a lot of CSS.  Such is life.
 
-@import "style/level2";
+@import "level2";
 
 input[type='submit'],
 input[type='button'],
